fix(libs): add missing path mapping for page-preview use case
Add TypeScript path mapping for @codelab/frontend-application-app/use-cases/page-preview
to fix module resolution error in sites app build.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -252,6 +252,9 @@
       "@codelab/frontend-application-app/use-cases/import-app": [
         "libs/frontend/application/app/src/use-cases/import-app/index.ts"
       ],
+      "@codelab/frontend-application-app/use-cases/page-preview": [
+        "libs/frontend/application/app/src/use-cases/page-preview/index.ts"
+      ],
       "@codelab/frontend-application-app/use-cases/select-app-options": [
         "libs/frontend/application/app/src/use-cases/select-app-options/index.ts"
       ],
