fix(apps-sites): add force-dynamic to root page to fix build error
- Add 'export const dynamic = force-dynamic' to root page to prevent static generation
- Root page fetches data from API which isn't available during build
- This ensures the page is rendered at runtime when API is available

--- a/apps/sites/.env.example
+++ b/apps/sites/.env.example
@@ -4,6 +4,7 @@
 NEXT_PUBLIC_WEB_HOST=http://127.0.0.1
 NEXT_PUBLIC_API_HOSTNAME=http://127.0.0.1
 NEXT_PUBLIC_API_PORT=4000
+NEXT_PUBLIC_BASE_API_PATH=/api/v1
 
 #
 # Auth0
