fix(libs-tools-tsc-check): use source tsconfig.json instead of dist path
Add explicit tsc-check targets to override plugin's incorrect dist path resolution

--- a/libs/tools/tsc-check/project.json
+++ b/libs/tools/tsc-check/project.json
@@ -42,6 +42,14 @@
         ]
       }
     },
+    "tsc-check": {
+      "cache": true,
+      "command": "tsc -p libs/tools/tsc-check/tsconfig.json --noEmit --incremental --tsBuildInfoFile /dev/null"
+    },
+    "tsc-check:spec": {
+      "cache": true,
+      "command": "tsc -p libs/tools/tsc-check/tsconfig.spec.json --noEmit --incremental --tsBuildInfoFile /dev/null"
+    },
     "lint": {
       "executor": "@nx/eslint:lint"
     },
