fix(libs-tools): fix env.sh semver validation in CircleCI
- Add nvm loading before using npx to ensure node/npm are available
- Add debug logging to validate-semver.js for better error visibility
- Ensure validate-semver.js handles empty version tags gracefully
- Fix MODULE_NOT_FOUND error by loading nvm from $HOME/.nvm/nvm.sh

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -597,6 +597,7 @@ jobs:
     resource_class: large
     steps:
       - checkout
+      - install-nvm
       - install-terraform
       - setup-env
       - login-docker
@@ -616,8 +617,8 @@ jobs:
     resource_class: << parameters.resource_class >>
     steps:
       - checkout
-      - setup-env
       - install-nvm
+      - setup-env
       - install-pnpm
       - install-packages
   tf-apply:
