--- a/.circleci/config/jobs/setup-infra-workspace.yml
+++ b/.circleci/config/jobs/setup-infra-workspace.yml
@@ -2,6 +2,7 @@ executor: docker-node
 resource_class: large
 steps:
   - checkout
+  - install-nvm
   - install-terraform
   - setup-env
   - login-docker
