ci(libs-tools): add extensive npx debugging to diagnose CI issues
- Source BASH_ENV in "Set Node Version" step to ensure nvm is available
- Add npm/npx version output to verify installation
- Add npm config debugging to env.sh
- Test npx package installation before using it
- Show npm cache and prefix directories
- This will help identify why npx isn't installing packages properly in CI

--- a/.circleci/config/commands/install-nvm.yml
+++ b/.circleci/config/commands/install-nvm.yml
@@ -15,7 +15,12 @@ steps:
   - run:
       name: 'Set Node Version'
       command: |
+        source $BASH_ENV
         nvm install 22.14.0
         nvm alias default 22.14.0
         node -v
         which node
+        npm -v
+        which npm
+        npx -v
+        which npx
