--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,10 +108,15 @@ commands:
             - ~/.nvm
       - run:
           command: |
+            source $BASH_ENV
             nvm install 22.14.0
             nvm alias default 22.14.0
             node -v
             which node
+            npm -v
+            which npm
+            npx -v
+            which npx
           name: Set Node Version
   install-packages:
     steps:
