--- a/libs/shared/infra/fetch-server/project.json
+++ b/libs/shared/infra/fetch-server/project.json
@@ -11,5 +11,13 @@
     "scope:shared"
   ],
   "// targets": "to see all targets run: nx show project shared-infra-fetch-server --web",
-  "targets": {}
+  "targets": {
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "libs/shared/infra/fetch-server/jest.config.ts"
+      }
+    }
+  }
 }
