--- a/package.json
+++ b/package.json
@@ -187,6 +187,8 @@
     "cross-fetch": "3.1.4",
     "dataloader": "^2.2.3",
     "deep-object-diff": "1.1.9",
+    "deepmerge": "^4.3.1",
+    "deepmerge-ts": "^7.1.5",
     "diff": "5.1.0",
     "dir-compare": "4.2.0",
     "dots-wrapper": "3.11.8",
@@ -223,7 +225,9 @@
     "next-seo": "6.6.0",
     "next-themes": "0.4.4",
     "node-fetch": "^3.3.2",
+    "object-scan": "^20.0.1",
     "object-typed": "1.0.0",
+    "p-map": "^7.0.3",
     "p-min-delay": "4.0.2",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
@@ -360,6 +364,7 @@
     "@types/chance": "1.1.4",
     "@types/concurrently": "6.4.0",
     "@types/cookie": "0.5.1",
+    "@types/deepmerge": "^2.2.3",
     "@types/diff": "5.0.3",
     "@types/express": "4.17.21",
     "@types/flat": "5.0.2",
@@ -386,6 +391,7 @@
     "@types/react-syntax-highlighter": "15.5.4",
     "@types/styled-components": "5.1.26",
     "@types/supertest": "2.0.16",
+    "@types/traverse": "^0.6.37",
     "@types/uuid": "8.3.4",
     "@types/validator": "13.12.2",
     "@types/wait-on": "5.3.1",
@@ -457,6 +463,7 @@
     "semver": "^7.7.2",
     "swc-loader": "0.2.6",
     "tailwindcss": "3.4.10",
+    "traverse": "^0.6.11",
     "ts-essentials": "9.1.2",
     "ts-jest": "^29.1.0",
     "ts-morph": "19.0.0",
