--- a/package.json
+++ b/package.json
@@ -463,7 +463,7 @@
     "semver": "^7.7.2",
     "swc-loader": "0.2.6",
     "tailwindcss": "3.4.10",
-    "traverse": "^0.6.11",
+    "traverse": "0.6.11",
     "ts-essentials": "9.1.2",
     "ts-jest": "^29.1.0",
     "ts-morph": "19.0.0",
