chore(libs): migrate to explicit lint targets and add missing configurations
- Remove lint targets from all project.json files (173 projects)
- Add explicit lint targets using @nx/eslint:lint executor to all projects
- Add lint targets to 15 projects that were missing them
- Create tsconfig.spec.json for shared-infra-fetch to fix ESLint configuration
- Update nx.json to remove @nx/eslint/plugin in favor of explicit targets
- Add .eslintignore file for web app to exclude .next directory
- Fix arrow function lint errors in demo app

This change ensures consistent ESLint configuration across all projects
and resolves path resolution issues with the inferred lint targets.

--- a/apps/demo/project.json
+++ b/apps/demo/project.json
@@ -11,6 +11,9 @@
       "options": {
         "jestConfig": "apps/demo/jest.config.ts"
       }
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint"
     }
   }
 }
