--- a/libs/shared/infra/sentry/project.json
+++ b/libs/shared/infra/sentry/project.json
@@ -17,6 +17,9 @@
       "options": {
         "jestConfig": "libs/shared/infra/sentry/jest.config.ts"
       }
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint"
     }
   }
 }
