--- a/libs/frontend/application/shared/store/project.json
+++ b/libs/frontend/application/shared/store/project.json
@@ -11,5 +11,9 @@
     "layer:application"
   ],
   "// targets": "to see all targets run: nx show project frontend-application-shared-store --web",
-  "targets": {}
+  "targets": {
+    "lint": {
+      "executor": "@nx/eslint:lint"
+    }
+  }
 }
