--- a/libs/frontend/infra/connector/project.json
+++ b/libs/frontend/infra/connector/project.json
@@ -11,5 +11,9 @@
     "scope:frontend"
   ],
   "// targets": "to see all targets run: nx show project frontend-infra-connector --web",
-  "targets": {}
+  "targets": {
+    "lint": {
+      "executor": "@nx/eslint:lint"
+    }
+  }
 }
