--- a/libs/shared/domain/module/app/project.json
+++ b/libs/shared/domain/module/app/project.json
@@ -10,5 +10,9 @@
     "scope:shared"
   ],
   "// targets": "to see all targets run: nx show project shared-domain-module-app --web",
-  "targets": {}
+  "targets": {
+    "lint": {
+      "executor": "@nx/eslint:lint"
+    }
+  }
 }
