--- a/libs/shared/infra/fetch/project.json
+++ b/libs/shared/infra/fetch/project.json
@@ -11,5 +11,9 @@
     "scope:shared"
   ],
   "// targets": "to see all targets run: nx show project shared-infra-fetch --web",
-  "targets": {}
+  "targets": {
+    "lint": {
+      "executor": "@nx/eslint:lint"
+    }
+  }
 }
