fix(libs): resolve lint errors in backend-infra-core, design-system, and demo
- Fix unnecessary conditional operators in backend-infra-core
- Convert function declarations to arrow functions in design-system and demo
- Update tsconfig and eslint config for design-system to include config files
- Move function definition before usage in design-system storybook config

--- a/apps/design-system/.eslintrc.json
+++ b/apps/design-system/.eslintrc.json
@@ -10,6 +10,7 @@
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
         "project": [
+          "apps/design-system/tsconfig.json",
           "apps/design-system/tsconfig.*?.json",
           "apps/design-system/tsconfig.storybook.json"
         ]
