--- a/apps/design-system/tsconfig.json
+++ b/apps/design-system/tsconfig.json
@@ -7,7 +7,7 @@
     "strict": true
   },
   "files": [],
-  "include": [],
+  "include": ["*.js", "*.ts"],
   "references": [
     {
       "path": "./tsconfig.lib.json"
