--- a/libs/shared/infra/fetch/project.json
+++ b/libs/shared/infra/fetch/project.json
@@ -14,6 +14,13 @@
   "targets": {
     "lint": {
       "executor": "@nx/eslint:lint"
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "libs/shared/infra/fetch/jest.config.ts"
+      }
     }
   }
 }
