feat(logging): implement namespace-based logging with shared utilities
- Add browser logger to TypeDomainService with namespace 'service:type'
- Change environment variable from NEXT_PUBLIC_LOG_NAMESPACES to NEXT_PUBLIC_DEBUG
- Add separate API_DEBUG for backend with namespace validation
- Create shared logger utilities in @codelab/shared-infra-logger
- Share LogLevel, LogContext types between frontend and backend
- Rename library from shared-infra-logging to shared-infra-logger
- Update all imports across the codebase to use new library name
- Fix TypeScript compilation errors in logger configuration

Resolves #3736

--- a/.env.test.example
+++ b/.env.test.example
@@ -16,6 +16,15 @@ NEXT_PUBLIC_WEB_HOST=http://127.0.0.1:3001
 NEXT_PUBLIC_API_HOSTNAME=http://127.0.0.1
 NEXT_PUBLIC_API_PORT=4001
 NEXT_PUBLIC_BASE_API_PATH=/api/v1
+# Browser logger namespaces (e.g., "service:*", "components:*,-components:debug")
+NEXT_PUBLIC_DEBUG=""
+
+#
+# API
+#
+# Backend logger namespaces (e.g., "service:*", "@neo4j/graphql:*,-repository:debug")
+# Allowed prefixes: graphql, service, command, repository, neo4j, @neo4j/graphql
+API_DEBUG=""
 
 #
 # Auth0 - Next - those are required by nextjs-auth0 - don't change their names
