--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -4,7 +4,9 @@
 
 # 'verbose', 'debug', 'info', 'warn', 'error', 'fatal'
 API_LOG_LEVEL=verbose,debug,info,warn,error,fatal
-DEBUG=
+# Backend logger namespaces (e.g., "service:*", "@neo4j/graphql:*,-repository:debug")
+# Allowed prefixes: graphql, service, command, repository, neo4j
+API_DEBUG=
 
 #
 # Auth0 users
