--- a/apps/api/.env.test.example
+++ b/apps/api/.env.test.example
@@ -2,7 +2,9 @@
 # 'verbose', 'debug', 'info', 'warn', 'error', 'fatal'
 #
 API_LOG_LEVEL=info
-DEBUG=services:*
+# Backend logger namespaces (e.g., "service:*", "@neo4j/graphql:*,-repository:debug")
+# Allowed prefixes: graphql, service, command, repository, neo4j
+API_DEBUG=service:*
 
 #
 # Auth0 users
