--- a/package.json
+++ b/package.json
@@ -302,6 +302,8 @@
     "@chromatic-com/storybook": "1.7.0",
     "@commitlint/cli": "19.7.1",
     "@commitlint/config-conventional": "19.7.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.31.0",
     "@graphql-codegen/cli": "5.0.4",
     "@graphql-codegen/near-operation-file-preset": "3.0.0",
     "@graphql-codegen/schema-ast": "4.1.0",
@@ -318,22 +320,22 @@
     "@nestjs/schematics": "11.0.5",
     "@nestjs/testing": "11.0.7",
     "@next/eslint-plugin-next": "15.1.6",
-    "@nx/devkit": "21.2.1",
-    "@nx/eslint": "21.2.1",
-    "@nx/eslint-plugin": "21.2.1",
-    "@nx/jest": "21.2.1",
-    "@nx/js": "21.2.1",
-    "@nx/nest": "21.2.1",
-    "@nx/next": "21.2.1",
-    "@nx/node": "21.2.1",
-    "@nx/playwright": "21.2.1",
-    "@nx/plugin": "21.2.1",
-    "@nx/react": "21.2.1",
-    "@nx/storybook": "21.2.1",
-    "@nx/vite": "21.2.1",
-    "@nx/web": "21.2.1",
-    "@nx/webpack": "21.2.1",
-    "@nx/workspace": "21.2.1",
+    "@nx/devkit": "21.2.4",
+    "@nx/eslint": "21.2.4",
+    "@nx/eslint-plugin": "21.2.4",
+    "@nx/jest": "21.2.4",
+    "@nx/js": "21.2.4",
+    "@nx/nest": "21.2.4",
+    "@nx/next": "21.2.4",
+    "@nx/node": "21.2.4",
+    "@nx/playwright": "21.2.4",
+    "@nx/plugin": "21.2.4",
+    "@nx/react": "21.2.4",
+    "@nx/storybook": "21.2.4",
+    "@nx/vite": "21.2.4",
+    "@nx/web": "21.2.4",
+    "@nx/webpack": "21.2.4",
+    "@nx/workspace": "21.2.4",
     "@parcel/watcher": "2.4.1",
     "@playwright/test": "1.51.1",
     "@sentry/types": "8.54.0",
@@ -397,9 +399,9 @@
     "@types/webpack": "5.28.0",
     "@types/ws": "8.5.10",
     "@types/yargs": "17.0.24",
-    "@typescript-eslint/eslint-plugin": "7.17.0",
-    "@typescript-eslint/parser": "7.17.0",
-    "@typescript-eslint/utils": "7.17.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "@typescript-eslint/utils": "7.18.0",
     "ajv-formats": "3.0.1",
     "ajv-keywords": "5.1.0",
     "autoprefixer": "10.4.14",
@@ -415,7 +417,7 @@
     "del-cli": "5.1.0",
     "dotenv": "15.0.0",
     "env-cmd": "10.1.0",
-    "eslint": "8.57.0",
+    "eslint": "8.57.1",
     "eslint-config-next": "15.3.0",
     "eslint-config-prettier": "10.1.2",
     "eslint-import-resolver-node": "0.3.9",
@@ -440,6 +442,7 @@
     "eslint-plugin-unused-imports": "3.2.0",
     "execa": "5.1.1",
     "git-changed-files": "1.0.0",
+    "globals": "^16.3.0",
     "husky": "9.1.7",
     "is-port-reachable": "3.1.0",
     "jest": "30.0.3",
@@ -456,7 +459,7 @@
     "minimatch": "9.0.4",
     "msw": "2.7.0",
     "msw-storybook-addon": "2.0.4",
-    "nx": "21.2.1",
+    "nx": "21.2.4",
     "pino-pretty": "13.0.0",
     "postcss": "8.4.45",
     "semver": "^7.7.2",
