--- a/scripts/eslint/.nx.eslintrc.json
+++ b/scripts/eslint/.nx.eslintrc.json
@@ -152,8 +152,7 @@
             ]
           }
         ],
-        "@typescript-eslint/no-extra-semi": "error",
-        "no-extra-semi": "off"
+        "no-extra-semi": "error"
       }
     },
     {
@@ -161,8 +160,7 @@
       "extends": ["plugin:@nx/javascript"],
       "rules": {
         "@typescript-eslint/no-unused-vars": "off",
-        "@typescript-eslint/no-extra-semi": "error",
-        "no-extra-semi": "off"
+        "no-extra-semi": "error"
       }
     }
   ]
