feat: migrate ESLint configuration to flat config format
- Convert root .eslintrc.json to eslint.config.mjs using FlatCompat
- Migrate web project to use eslint.config.mjs
- Update ESLint and TypeScript ESLint packages to compatible versions
- Set ESLINT_USE_FLAT_CONFIG=true in .env and lint-staged config
- Preserve all ignore patterns from .eslintignore in new config
- Fix ESLint rule compatibility issues (@typescript-eslint/no-extra-semi)
- Add project-specific overrides for Sentry config files
- Update Nx to version 21.2.4
- Remove deprecated .eslintrc.json files
- Add config files to ignore list to prevent TypeScript parsing errors

BREAKING CHANGE: Projects now require eslint.config.js/mjs files instead of .eslintrc.json

feat: complete ESLint v9 flat config migration and fix all linting errors

- Migrated all ESLint configurations from .eslintrc.json to flat config format
- Fixed projectService performance issues by using app-specific configuration
- Replaced deprecated @stylistic/eslint-plugin-ts with unified @stylistic/eslint-plugin
- Fixed component naming to match canonical/id-match pattern (Error404Page → ErrorNotFoundPage)
- Fixed react/jsx-no-useless-fragment by replacing empty fragments with null
- Fixed ESLint disable comment rule names
- Added proper ignore patterns to prevent scanning build directories
- Updated import formatting to comply with import-specifier-newline rule

fix: re-enable import lint rules with TypeScript resolver

- Re-enabled import config in root eslint.config.mjs
- Added import/no-unresolved and import/named rules to import.eslint.mjs
- Re-enabled TypeScript resolver for import plugin
- Fixed jest.config.ts ESLint parsing error by including it in tsconfig.spec.json
- Moved all canonical rules from base.eslint.mjs to canonical.eslint.mjs
- Removed deprecated eslint-plugin-import in favor of eslint-plugin-import-x
- Fixed eslint-disable comment for unused v4 import
- Disabled canonical/import-specifier-newline to avoid conflicts 

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -344,6 +344,85 @@ jobs:
           command: pnpm cli tasks graphql-codegen --stage ci
           name: Check GraphQL Codegen
       - run:
+          command: |
+            echo "=== Checking dist/libs/tools/workspace structure ==="
+            ls -la dist/libs/tools/workspace/ || echo "Directory not found"
+            echo ""
+            echo "=== Checking generators.json ==="
+            cat dist/libs/tools/workspace/generators.json || echo "generators.json not found"
+            echo ""
+            echo "=== Checking src/generators directory ==="
+            ls -la dist/libs/tools/workspace/src/generators/ || echo "Generators directory not found"
+            echo ""
+            echo "=== Checking nx-project-config generator files ==="
+            ls -la dist/libs/tools/workspace/src/generators/nx-project-config/ || echo "nx-project-config directory not found"
+            echo ""
+            echo "=== Checking if JavaScript files exist ==="
+            test -f dist/libs/tools/workspace/src/generators/nx-project-config/nx-project-config.js && echo "nx-project-config.js EXISTS" || echo "nx-project-config.js NOT FOUND"
+          name: 'Debug: Check dist folder structure'
+      - run:
+          command: |
+            echo "=== Checking pnpm list for @codelab/tools-workspace ==="
+            pnpm list @codelab/tools-workspace || echo "Package not listed"
+            echo ""
+            echo "=== Checking node_modules/.pnpm for workspace package ==="
+            ls -la node_modules/.pnpm/ | grep "@codelab+tools-workspace" || echo "Not found in .pnpm"
+            echo ""
+            echo "=== Checking actual installed location ==="
+            find node_modules/.pnpm -name "tools-workspace" -type d 2>/dev/null | head -5
+            echo ""
+            echo "=== Checking symlink in node_modules ==="
+            ls -la node_modules/@codelab/tools-workspace || echo "Symlink not found"
+            echo ""
+            echo "=== Checking if pnpm installed workspace packages correctly ==="
+            pnpm list --depth=0 | grep "file:dist" || echo "No file: protocol packages found"
+          name: 'Debug: Check pnpm workspace protocol linking'
+      - run:
+          command: |
+            echo "=== Finding the actual @codelab/tools-workspace in node_modules ==="
+            WORKSPACE_PATH=$(find node_modules/.pnpm -path "*/@codelab/tools-workspace" -type d 2>/dev/null | head -1)
+            if [ -n "$WORKSPACE_PATH" ]; then
+              echo "Found at: $WORKSPACE_PATH"
+              echo ""
+              echo "=== Contents of installed workspace package ==="
+              ls -la "$WORKSPACE_PATH"
+              echo ""
+              echo "=== Checking generators in installed location ==="
+              ls -la "$WORKSPACE_PATH/src/generators/nx-project-config/" || echo "Generators not found in installed location"
+            else
+              echo "Could not find @codelab/tools-workspace in node_modules"
+            fi
+          name: 'Debug: Verify workspace package contents'
+      - run:
+          command: |
+            echo "=== Current working directory ==="
+            pwd
+            echo ""
+            echo "=== Checking pnpm-workspace.yaml ==="
+            cat pnpm-workspace.yaml || echo "pnpm-workspace.yaml not found"
+            echo ""
+            echo "=== Checking package.json devDependencies for file: protocol ==="
+            cat package.json | jq '.devDependencies | to_entries[] | select(.value | startswith("file:"))' || echo "Failed to parse package.json"
+            echo ""
+            echo "=== Checking if pnpm install was run ==="
+            test -f pnpm-lock.yaml && echo "pnpm-lock.yaml EXISTS" || echo "pnpm-lock.yaml NOT FOUND"
+            echo ""
+            echo "=== Checking Node.js and pnpm versions ==="
+            node --version
+            pnpm --version
+            echo ""
+            echo "=== Re-installing @codelab/tools-workspace specifically ==="
+            pnpm install @codelab/tools-workspace --force || echo "Failed to reinstall"
+          name: 'Debug: Check pnpm workspace and file protocol'
+      - run:
+          command: |
+            echo "=== Attempting to run generator directly with more verbose output ==="
+            pnpm nx generate @codelab/tools-workspace:nx-project-config --no-interactive --verbose || true
+            echo ""
+            echo "=== Checking nx.json for generator configuration ==="
+            cat nx.json | jq '.generators' || echo "No generators config in nx.json"
+          name: 'Debug: Try running the generator directly'
+      - run:
           command: pnpm cli tasks workspace-codegen --stage ci
           name: Check Generate Workspace
   docker-api:
