fix: re-enable import lint rules with TypeScript resolver
- Re-enabled import config in root eslint.config.mjs
- Added import/no-unresolved and import/named rules to import.eslint.mjs
- Re-enabled TypeScript resolver for import plugin
- Fixed jest.config.ts ESLint parsing error by including it in tsconfig.spec.json
- Moved all canonical rules from base.eslint.mjs to canonical.eslint.mjs
- Removed deprecated eslint-plugin-import in favor of eslint-plugin-import-x
- Fixed eslint-disable comment for unused v4 import
- Disabled canonical/import-specifier-newline to avoid conflicts with prettier
- Fixed unused-imports rule name in codegen.eslint.mjs and .lintstagedrc.js

--- a/apps/web/tsconfig.spec.json
+++ b/apps/web/tsconfig.spec.json
@@ -15,7 +15,8 @@
     "**/*.test.js",
     "**/*.spec.jsx",
     "**/*.test.jsx",
-    "**/*.d.ts"
+    "**/*.d.ts",
+    "jest.config.ts"
   ],
   "exclude": ["node_modules", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
