fix: resolve ESLint and TypeScript configuration issues
- Migrate frontend-application-app library to ESLint v9 flat config format
- Fix TypeScript module resolution for Storybook preview.tsx by extending tsconfig.base.json directly
- Fix ESLint import plugin uuid v4 resolution by adding proper extensions and external-module-folders settings
- Update canonical/id-match rule to support flexible auth0 and React19 patterns
- Add eslint.experimental.useFlatConfig for VS Code ESLint extension compatibility
- Fix identifier naming issues by removing underscores from variable names (_domain -> domain, _schema -> schema)
- Document TypeScript project references issue in GitHub issue #3646

This resolves ESLint import errors and ensures proper TypeScript configuration for both the library and Storybook files.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
   "eslint.validate": [
     "json"
   ],
+  "eslint.experimental.useFlatConfig": true,
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
