--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -53,6 +53,7 @@
     "**/*.stories.ts",
     "**/*.stories.js",
     "**/*.stories.jsx",
-    "**/*.stories.tsx"
+    "**/*.stories.tsx",
+    ".storybook"
   ]
 }
