fix: add jquery types to api tsconfig
- Add 'jquery' to types array in apps/api/tsconfig.json
- This resolves TypeScript errors when building the api project
- The api tsconfig was overriding the base types configuration

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -14,7 +14,7 @@
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["node", "cypher"]
+    "types": ["node", "cypher", "jquery"]
   },
   "include": ["webpack.config.js", "src/**/*.ts"],
   "exclude": ["jest.config.ts"]
