fix: add build-nx-libs dependency to codegen job in CircleCI
- The codegen job runs nx-project-config generator from @codelab/tools-workspace
- This package is referenced as file:dist/libs/tools/workspace in package.json
- The generator needs the compiled files to exist in dist folder
- Adding build-nx-libs as a requirement ensures libraries are built before codegen runs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -871,6 +871,7 @@ workflows:
                 - staging
           requires:
             - setup-workspace
+            - build-nx-libs
           resource_class: medium
       - unit:
           filters:
