--- a/libs/backend/application/admin/tsconfig.spec.json
+++ b/libs/backend/application/admin/tsconfig.spec.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../../../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node", "cypher"]
+    "types": ["jest", "node", "cypher", "jquery"]
   },
   "include": [
     "jest.config.ts",
