--- a/.circleci/config/workflows/app-pr.yml
+++ b/.circleci/config/workflows/app-pr.yml
@@ -71,6 +71,7 @@ jobs:
             - staging
       requires:
         - setup-workspace
+        - build-nx-libs
   - unit:
       resource_class: large
       filters:
