fix: resolve CI build issues
- Fix nx.json coverage output path to use {projectName} instead of {projectRoot}
- Install eslint-formatter-junit for CI junit formatting
- Bump tools-workspace version to 0.0.3 to invalidate CircleCI cache

--- a/nx.json
+++ b/nx.json
@@ -114,7 +114,7 @@
       "cache": true,
       "defaultConfiguration": "test",
       "inputs": ["default", "^default", "{workspaceRoot}/jest.preset.ts"],
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": ["{workspaceRoot}/coverage/{projectName}"],
       "options": {
         "parallel": 1,
         "passWithNoTests": true,
