--- a/.mcp.json.example
+++ b/.mcp.json.example
@@ -53,7 +53,11 @@
     },
     "playwright": {
       "command": "npx",
-      "args": ["-y", "@modelcontextprotocol/server-playwright"]
+      "args": [
+        "--prefer-offline",
+        "-y",
+        "@modelcontextprotocol/server-playwright"
+      ]
     }
   }
 }
