--- a/nx.json
+++ b/nx.json
@@ -154,7 +154,7 @@
       }
     },
     "@nx/eslint:lint": {
-      "inputs": ["default", "{workspaceRoot}/.eslintrc.json"],
+      "inputs": ["default", "{workspaceRoot}/eslint.config.mjs"],
       "cache": true,
       "outputs": ["{options.outputFile}"],
       "options": {
