--- a/.circleci/config/workflows/infra-pr.yml
+++ b/.circleci/config/workflows/infra-pr.yml
@@ -56,6 +56,7 @@ jobs:
           only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       context:
         - prod
+        - build
       requires:
         - setup-infra-workspace
   - docker-api:
@@ -67,6 +68,7 @@ jobs:
           only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       context:
         - prod
+        - build
       requires:
         - setup-infra-workspace
   - docker-sites:
@@ -78,6 +80,7 @@ jobs:
           only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       context:
         - prod
+        - build
       requires:
         - setup-infra-workspace
   - docker-landing:
@@ -89,6 +92,7 @@ jobs:
           only: /^[0-9]+\.[0-9]+\.[0-9]+$/
       context:
         - prod
+        - build
       requires:
         - setup-infra-workspace
   - tf-plan:
