refactor: remove lazy loading from environment configuration
Fixes #3720
Fixes #3734

- Remove all private fields and lazy initialization pattern
- Convert all services to use direct getters
- Simplify config.ts to create service instances upfront
- Add missing Supabase env vars to env.ts
- Ensure consistent pattern across all environment services

--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -18,6 +18,7 @@
           "outputPath": "dist/apps/api-test"
         }
       },
+      "inputs": [],
       "defaultConfiguration": "prod",
       "executor": "@nx/webpack:webpack",
       "options": {
