fix(libs): add NEXT_PUBLIC_WEB_HOST env var to landing droplet
- Add NX_CLOUD_ACCESS_TOKEN to all Docker builds for remote caching
- Configure landing droplet to receive NEXT_PUBLIC_WEB_HOST environment variable
- Symlink web host variable from codelab-web module
- Update docker-compose template to pass environment variable to container

--- a/infra/terraform/modules/codelab-landing/tftpl/docker-compose.tftpl.yaml
+++ b/infra/terraform/modules/codelab-landing/tftpl/docker-compose.tftpl.yaml
@@ -6,3 +6,5 @@ services:
     restart: unless-stopped
     ports:
       - '80:3000'
+    environment:
+      - NEXT_PUBLIC_WEB_HOST=${next_public_web_host}
