feat(apps-landing): migrate from Pages Router to App Router
- Migrate all pages from pages/ to app/ directory structure
- Convert pages to App Router conventions with layout.tsx
- Update client components with 'use client' directive
- Move API routes to app/api structure with route.ts files
- Update Docker build configuration for App Router
- Maintain all existing functionality and routes

--- a/.docker/prod/build.docker-compose.yaml
+++ b/.docker/prod/build.docker-compose.yaml
@@ -59,5 +59,6 @@ services:
         # NEXT_PUBLIC_INTERCOM_APP_ID: ${NEXT_PUBLIC_INTERCOM_APP_ID}
         NEXT_PUBLIC_SUPABASE_URL: ${NEXT_PUBLIC_SUPABASE_URL}
         NEXT_PUBLIC_SUPABASE_KEY: ${NEXT_PUBLIC_SUPABASE_KEY}
+        NEXT_PUBLIC_WEB_HOST: ${NEXT_PUBLIC_WEB_HOST}
         SUPABASE_DB_PASS: ${SUPABASE_DB_PASS}
     image: registry.digitalocean.com/codelabapp/landing:${DOCKER_TAG_VERSION}
