feat(apps-landing): migrate from Pages Router to App Router
- Migrate all pages from pages/ to app/ directory structure
- Convert pages to App Router conventions with layout.tsx
- Update client components with 'use client' directive
- Move API routes to app/api structure with route.ts files
- Update Docker build configuration for App Router
- Maintain all existing functionality and routes

--- a/apps/landing/tsconfig.json
+++ b/apps/landing/tsconfig.json
@@ -19,13 +19,15 @@
     "types": ["jest", "node", "styled-components", "uniforms"]
   },
   "include": [
-    "**/*.ts",
-    "**/*.tsx",
     "**/*.js",
     "**/*.jsx",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
     "next-env.d.ts",
+    "next.config.mjs",
     "tailwind.config.cjs",
-    "next.config.mjs"
+    "../../dist/apps/landing/.next/types/**/*.ts"
   ],
   "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
 }
