fix(libs-frontend-presentation-components): replace Ant Space to fix FOUC
- Created custom Space component using Tailwind CSS for SSR-friendly rendering
- Ant Design's Space uses CSS-in-JS causing styles to load after initial render
- Added ESLint rule to ban Ant Design Space imports project-wide
- Migrated all 16 files from Ant Design Space to custom component
- Eliminates flash of unstyled content where buttons stack vertically initially

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -898,6 +898,9 @@
       "@codelab/frontend-presentation-components-reactquill": [
         "libs/frontend/presentation/components/reactquill/src/index.ts"
       ],
+      "@codelab/frontend-presentation-components-space": [
+        "libs/frontend/presentation/components/space/src/index.ts"
+      ],
       "@codelab/frontend-presentation-container": [
         "libs/frontend/presentation/container/src/index.ts"
       ],
