--- a/package.json
+++ b/package.json
@@ -192,6 +192,8 @@
     "diff": "5.1.0",
     "dir-compare": "4.2.0",
     "dots-wrapper": "3.11.8",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "8.1.6",
     "env-var": "7.4.1",
     "eslint-plugin-barrel-files": "3.0.1",
@@ -256,7 +258,6 @@
     "react-resizable": "3.0.4",
     "react-resizable-panels": "2.1.7",
     "react-responsive": "9.0.0-beta.10",
-    "react-slick": "0.29.0",
     "react-sticky-box": "2.0.0",
     "react-stickynode": "4.1.0",
     "react-syntax-highlighter": "15.5.0",
@@ -389,7 +390,6 @@
     "@types/react-is": "18.3.0",
     "@types/react-resizable": "1.7.4",
     "@types/react-responsive": "8.0.5",
-    "@types/react-slick": "0.23.10",
     "@types/react-stickynode": "4.0.0",
     "@types/react-syntax-highlighter": "15.5.4",
     "@types/styled-components": "5.1.26",
